# StellarDemo

./: README.md  package-lock.json  package.json  tailwind.config.js
.stellar/identity/: admin.toml
contracts/click-reward/: Cargo.toml
contracts/click-reward/src/: lib.rs  test.rs
src/app/: globals.css  layout.tsx  page.tsx
