[package]
name = "click-reward"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "23.0.0-rc.1.1"
soroban-token-sdk = "23.0.0-rc.1.1"

[dev-dependencies]
soroban-sdk = { version = "23.0.0-rc.1.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
